finish the ranking and profile

--- a/pages/rankings.html
+++ b/pages/rankings.html
@@ -41,7 +41,7 @@
             ELIM MEAN
             <span class="tooltip">
                 <i class="info-icon">ⓘ</i>
-                <span class="tooltip-text">Average during elimination rounds</span>
+                <span class="tooltip-text">Average solve when set elimination is possible</span>
             </span>
             </div>
 
