--- a/pages/profile.html
+++ b/pages/profile.html
@@ -14,6 +14,8 @@
     <div id="navbar"></div>
     <!---->
 
+    <div id="loading" class="loading">Loading Profile...</div>
+
     
     <script src="/scripts/navbar.js"></script>
     <script src="/scripts/footer.js"></script>
