--- a/pages/rankings.html
+++ b/pages/rankings.html
@@ -54,10 +54,18 @@
             </div>
 
             <div class="stat">
-            W/L
+            ERROR RATE
             <span class="tooltip">
                 <i class="info-icon">ⓘ</i>
-                <span class="tooltip-text">Win to loss ratio</span>
+                <span class="tooltip-text">Percent of solves with any penalty</span>
+            </span>
+
+            </div>
+            <div class="stat">
+            W-L
+            <span class="tooltip">
+                <i class="info-icon">ⓘ</i>
+                <span class="tooltip-text">Set wins and losses</span>
             </span>
             </div>
         </div>
